fix: footer z-index + projects component ready to work
trop le soucis du détail je vais jamais finir

--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -19,10 +19,8 @@
 }
 
 
-@media (max-width: 992px) {
+@media (max-width: 792px) {
   .about-img-container:after {
-    width: 320px;
-    height: 180px;
-    bottom: 200px;
+    display: none;
   }
 }
